isBlank() lisäys